Convert HTTP file system to use C modular file system API (#1173)
Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -114,7 +114,6 @@ cc_library(
     name = "core_ops",
     srcs = [
         "kernels/archive_kernels.cc",
-        "kernels/http_kernels.cc",
         "ops/core_ops.cc",
     ],
     copts = tf_io_copts(),
@@ -580,7 +579,12 @@ cc_library(
         "kernels/azfs_kernels.cc",
         "kernels/file_system_plugins.cc",
         "kernels/file_system_plugins.h",
-    ],
+    ] + select({
+        "@bazel_tools//src/conditions:windows": [],
+        "//conditions:default": [
+            "kernels/http_kernels.cc",
+        ],
+    }),
     copts = tf_io_copts(),
     linkstatic = True,
     deps = [
