Initial commit of s3 modular file system plugin (credit @vnvo2409) (#1191)
* Initial commit of s3 modular file system plugin (credit vnvo2409)

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Disable use_multi_part_download for now, and several fixes

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/plugins/BUILD
+++ b/tensorflow_io/core/plugins/BUILD
@@ -31,6 +31,7 @@ cc_library(
     deps = [
         "//tensorflow_io/core/plugins/az",
         "//tensorflow_io/core/plugins/http",
+        "//tensorflow_io/core/plugins/s3",
     ],
     alwayslink = 1,
 )
