--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -299,6 +299,7 @@ jobs:
           bash -x -e tests/test_elasticsearch/elasticsearch_test.sh start
           bash -x -e tests/test_azure/start_azure.sh
           bash -x -e tests/test_sql/sql_test.sh
+          bash -x -e tests/test_gcloud/test_gcs.sh gcs-emulator
       - name: Test Linux
         run: |
           set -x -e
