Add Pulsar support (#1204)
* Add pulsar connector

* Add unit tests for PulsarIODataset

* Fix lint errors

* Add PulsarWriter

* Add unit tests for PulsarWriter

* Add PulsarResourceBase to reduce repeated code

* Start Pulsar service for tests in Github Actions

* Fix CI error

* Reuse variables

* Fix undefined symbol BIO_f_base64

* Fix conflict of test environment between Pulsar and Kafka

* Increase timeout to avoid flaky

* Update Copyright

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -206,6 +206,7 @@ jobs:
           bash -x -e tests/test_azure/start_azure.sh
           bash -x -e tests/test_pubsub/pubsub_test.sh
           bash -x -e tests/test_aws/aws_test.sh
+          bash -x -e tests/test_pulsar/pulsar_test.sh
       - name: Install ${{ matrix.python }} macOS
         run: |
           set -x -e
@@ -304,6 +305,7 @@ jobs:
           bash -x -e tests/test_azure/start_azure.sh
           bash -x -e tests/test_sql/sql_test.sh
           bash -x -e tests/test_gcloud/test_gcs.sh gcs-emulator
+          bash -x -e tests/test_pulsar/pulsar_test.sh
       - name: Test Linux
         run: |
           set -x -e
