--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -663,6 +663,22 @@ cc_library(
     alwayslink = 1,
 )
 
+cc_library(
+    name = "pulsar_ops",
+    srcs = [
+        "kernels/pulsar_kernel.cc",
+        "ops/pulsar_ops.cc",
+    ],
+    copts = tf_io_copts(),
+    linkstatic = True,
+    deps = [
+        "@local_config_tf//:libtensorflow_framework",
+        "@local_config_tf//:tf_header_lib",
+        "@pulsar",
+    ],
+    alwayslink = 1,
+)
+
 cc_binary(
     name = "python/ops/libtensorflow_io.so",
     copts = tf_io_copts(),
@@ -684,6 +700,7 @@ cc_binary(
         "//tensorflow_io/core:numpy_ops",
         "//tensorflow_io/core:parquet_ops",
         "//tensorflow_io/core:pcap_ops",
+        "//tensorflow_io/core:pulsar_ops",
         "//tensorflow_io/core:operation_ops",
         "//tensorflow_io/core:pubsub_ops",
         "//tensorflow_io/core:serialization_ops",
