Add support for mongoDB (#1207)
* [mongo] build libmongoc

* [tests] setup container for tests

* add platform based genrule conditions

* expose handler python api

* lint fixes

* disable sasl build for linux

* modify build opts for libmongoc

add unistd.h for windows build

add missing include

os based bson build

bson os fix

* expose MongoDBIODataset

* expose MongoDBWriter python api

* modify build options

add missing header

modify ssl build opts

modify ssl opts

disable aws auth opt

ssl secure channel for windows

ssl opts for linux and mac

disable ssl for linux

modify bson opts

openssl based build

disable ssl for mac and linux

enable dnsapi for windows

use mongo-c-driver-1.16.2

enable sasl support

add linkopts for boringssl build

update boringssl version

add openssl deps for centos

add libssl-dev dep

become sudo

update README.md instructions

modify build options

* build separate .so for mongo_ops

* install make for centos builds

* build libtensorflow_io_mongodb.so in windows

* handle scopes for centos 7

* use boringssl for windows

* lint fixes

* disable libcrypto for windows

* patch boringssl dependency

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -302,6 +302,7 @@ jobs:
           bash -x -e tests/test_pubsub/pubsub_test.sh
           bash -x -e tests/test_prometheus/prometheus_test.sh start
           bash -x -e tests/test_elasticsearch/elasticsearch_test.sh start
+          bash -x -e tests/test_mongodb/mongodb_test.sh start
           bash -x -e tests/test_azure/start_azure.sh
           bash -x -e tests/test_sql/sql_test.sh
           bash -x -e tests/test_gcloud/test_gcs.sh gcs-emulator
