--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,19 +59,6 @@ jobs:
           bash -x -e source.sh
           python3 -c 'import tensorflow as tf; print(tf.version.VERSION)'
 
-  ubuntu-1804:
-    name: Ubuntu 18.04
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: |
-          set -x -e
-          bash -x -e .github/workflows/build.space.sh
-          python3 .github/workflows/build.instruction.py README.md "##### Ubuntu 18.04/20.04" > source.sh
-          cat source.sh
-          docker run -i --rm -v $PWD:/v -w /v --net=host ubuntu:18.04 \
-            bash -x -e source.sh
-
   ubuntu-2004:
     name: Ubuntu 20.04
     runs-on: ubuntu-latest
@@ -80,7 +67,7 @@ jobs:
       - run: |
           set -x -e
           bash -x -e .github/workflows/build.space.sh
-          python3 .github/workflows/build.instruction.py README.md "##### Ubuntu 18.04/20.04" > source.sh
+          python3 .github/workflows/build.instruction.py README.md "##### Ubuntu 20.04" > source.sh
           cat source.sh
           docker run -i --rm -v $PWD:/v -w /v --net=host ubuntu:20.04 \
             bash -x -e source.sh
