Add initial HDFS tests (#1225)
* Add initial HDFS tests

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Install Java and libhdfs.so for tests

* Fix kokorun

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -298,6 +298,7 @@ jobs:
           bash -x -e tests/test_sql/sql_test.sh
           bash -x -e tests/test_gcloud/test_gcs.sh gcs-emulator
           bash -x -e tests/test_pulsar/pulsar_test.sh
+          bash -x -e tests/test_hdfs/hdfs_test.sh
       - name: Test Linux
         run: |
           set -x -e
