Update the API Compatibility test to include tf-nightly vs. tensorflow-io==0.17.0 (#1230)
* Update the API Compatibility test to include tf-nightly vs. tensorflow-io==0.17.0

as we release tensorflow-io==0.17.0

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Bump Linux and Windows version checks

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -1,6 +1,9 @@
 name: API Compatibility
 
 on:
+  push:
+    branches:
+      - master
   schedule:
     - cron: "0 12 * * *"
 
@@ -15,7 +18,7 @@ jobs:
     strategy:
       matrix:
         python: ['3.8']
-        version: ['tensorflow==2.4.0rc4:tensorflow-io-nightly', 'tf-nightly:tensorflow-io-nightly']
+        version: ['tensorflow==2.4.0:tensorflow-io-nightly', 'tf-nightly:tensorflow-io==0.17.0', 'tf-nightly:tensorflow-io-nightly']
     steps:
       - uses: actions/checkout@v2
       - uses: docker-practice/actions-setup-docker@v1
@@ -54,7 +57,7 @@ jobs:
     strategy:
       matrix:
         python: ['3.8']
-        version: ['tensorflow==2.4.0rc4:tensorflow-io-nightly', 'tf-nightly:tensorflow-io-nightly']
+        version: ['tensorflow==2.4.0:tensorflow-io-nightly', 'tf-nightly:tensorflow-io==0.17.0', 'tf-nightly:tensorflow-io-nightly']
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
@@ -89,7 +92,7 @@ jobs:
     strategy:
       matrix:
         python: ['3.8']
-        version: ['tensorflow==2.4.0rc4:tensorflow-io-nightly', 'tf-nightly:tensorflow-io-nightly']
+        version: ['tensorflow==2.4.0:tensorflow-io-nightly', 'tf-nightly:tensorflow-io==0.17.0', 'tf-nightly:tensorflow-io-nightly']
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
