Add emulator for gcs (#1234)
* Bump com_github_googleapis_google_cloud_cpp to `1.21.0`

* Add gcs testbench

* Bump `libcurl` to `7.69.1`

--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -50,6 +50,7 @@ jobs:
           python -m pytest -s -v tests/test_http_eager.py
           python -m pytest -s -v tests/test_s3_eager.py
           python -m pytest -s -v tests/test_azure.py
+          python -m pytest -s -v tests/test_gcs_eager.py
 
   linux:
     name: Linux ${{ matrix.python }} + ${{ matrix.version }}
@@ -85,6 +86,7 @@ jobs:
           python -m pytest -s -v tests/test_http_eager.py
           python -m pytest -s -v tests/test_s3_eager.py
           python -m pytest -s -v tests/test_azure.py
+          python -m pytest -s -v tests/test_gcs_eager.py
 
   windows:
     name: Windows ${{ matrix.python }} + ${{ matrix.version }}
