fix nightly build because of missing `google-cloud-storage` (#1238)

--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -43,7 +43,7 @@ jobs:
           rm -rf tensorflow_io
           echo ${{ matrix.version }} | awk -F: '{print $1}' | xargs python -m pip install -U
           echo ${{ matrix.version }} | awk -F: '{print $2}' | xargs python -m pip install --no-deps -U
-          python -m pip install pytest-benchmark boto3
+          python -m pip install pytest-benchmark boto3 google-cloud-storage==1.32.0
           python -m pip freeze
           python -c 'import tensorflow as tf; print(tf.version.VERSION)'
           python -c 'import tensorflow_io as tfio; print(tfio.version.VERSION)'
@@ -79,7 +79,7 @@ jobs:
           rm -rf tensorflow_io
           echo ${{ matrix.version }} | awk -F: '{print $1}' | xargs python -m pip install -U
           echo ${{ matrix.version }} | awk -F: '{print $2}' | xargs python -m pip install --no-deps -U
-          python -m pip install pytest-benchmark boto3
+          python -m pip install pytest-benchmark boto3 google-cloud-storage==1.32.0
           python -m pip freeze
           python -c 'import tensorflow as tf; print(tf.version.VERSION)'
           python -c 'import tensorflow_io as tfio; print(tfio.version.VERSION)'
