--- a/tensorflow_io/core/plugins/BUILD
+++ b/tensorflow_io/core/plugins/BUILD
@@ -16,7 +16,7 @@ cc_library(
     linkstatic = True,
     deps = [
         "@local_config_tf//:libtensorflow_framework",
-        "@local_config_tf//:tf_header_lib",
+        "@local_config_tf//:tf_c_header_lib",
     ],
     alwayslink = 1,
 )
