--- a/tensorflow_io/core/plugins/hdfs/BUILD
+++ b/tensorflow_io/core/plugins/hdfs/BUILD
@@ -16,6 +16,8 @@ cc_library(
     linkstatic = True,
     deps = [
         "//tensorflow_io/core/plugins:plugins_header",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/synchronization",
         "@hadoop",
     ],
     alwayslink = 1,
