--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
           echo $PATH
           python3 --version
           python3 -c 'import site; print(site.getsitepackages())'
-          python3 .github/workflows/build.instruction.py --sudo=true README.md "#### macOS" > source.sh
+          python3 .github/workflows/build.instruction.py --sudo=true docs/development.md "#### macOS" > source.sh
           bash -x -e source.sh
           python3 -c 'import tensorflow as tf; print(tf.version.VERSION)'
 
@@ -67,7 +67,7 @@ jobs:
       - run: |
           set -x -e
           bash -x -e .github/workflows/build.space.sh
-          python3 .github/workflows/build.instruction.py README.md "##### Ubuntu 20.04" > source.sh
+          python3 .github/workflows/build.instruction.py docs/development.md "##### Ubuntu 20.04" > source.sh
           cat source.sh
           docker run -i --rm -v $PWD:/v -w /v --net=host ubuntu:20.04 \
             bash -x -e source.sh
@@ -80,7 +80,7 @@ jobs:
       - run: |
           set -x -e
           bash -x -e .github/workflows/build.space.sh
-          python3 .github/workflows/build.instruction.py README.md "##### CentOS 7" > source.sh
+          python3 .github/workflows/build.instruction.py docs/development.md "##### CentOS 7" > source.sh
           cat source.sh
           docker run -i --rm -v $PWD:/v -w /v --net=host centos:7 \
             bash -x -e source.sh
