Update _toc.yaml (#1290)

--- a/docs/tutorials/_toc.yaml
+++ b/docs/tutorials/_toc.yaml
@@ -34,3 +34,6 @@ toc:
   path: /io/tutorials/kafka
 - title: "Elasticsearch"
   path: /io/tutorials/elasticsearch
+- title: "Avro"
+  path: /io/tutorials/avro
+
