--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,12 @@ jobs:
           git log --pretty -1
           sudo python3 -m pip install -U numpy
           bazel run -s --verbose_failures --experimental_repo_remote_exec //tools/lint:check -- bazel pyupgrade black clang
+
+  lint-docs:
+    name: Lint for Docs
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v2
       - name: Run Lint Script for Docs
         run: |
           set -x -e
