Make OSSFileSystem works again (#1723)
* make ossfs work again

* make ossfs work again

* make ossfs work again

* fix code style

--- a/tensorflow_io/core/filesystems/BUILD
+++ b/tensorflow_io/core/filesystems/BUILD
@@ -38,6 +38,7 @@ cc_library(
         "//tensorflow_io/core/filesystems/az",
         "//tensorflow_io/core/filesystems/hdfs",
         "//tensorflow_io/core/filesystems/http",
+        "//tensorflow_io/core/filesystems/oss",
         "//tensorflow_io/core/filesystems/s3",
     ],
     alwayslink = 1,
